# Generated by Django 6.0.7 on 2026-07-26 23:16

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('gestion_web', '0006_alter_pedido_estado_alter_usuario_rol'),
        ('pagos', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Comprobante',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('imagen', models.ImageField(upload_to='comprobantes/')),
                ('estado', models.CharField(choices=[('PENDIENTE', 'Pendiente'), ('VALIDADO', 'Validado'), ('RECHAZADO', 'Rechazado')], default='PENDIENTE', max_length=15)),
                ('fecha_subida', models.DateTimeField(auto_now_add=True)),
                ('pedido', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='comprobante', to='gestion_web.pedido')),
                ('validado_por', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
            ],
        ),
    ]
